--- a/SCME.UI/PagesTech/AttestationSelectPage.xaml
+++ b/SCME.UI/PagesTech/AttestationSelectPage.xaml
@@ -4,7 +4,7 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:SCME.UI.PagesTech"
-      mc:Ignorable="d"  Title="Атестация"
+      mc:Ignorable="d"  Title="Аттестация"
        xmlns:res="clr-namespace:SCME.UI.Properties"
        xmlns:my="clr-namespace:SCME.UI"
        xmlns:uiServiceConfig="clr-namespace:SCME.UIServiceConfig.Properties;assembly=SCME.UIServiceConfig"
