--- a/SCME.UI/PagesTech/PasswordPage.xaml
+++ b/SCME.UI/PagesTech/PasswordPage.xaml
@@ -15,6 +15,7 @@
     </Page.Resources>
 
     <Grid>
+        <Button Style="{StaticResource BackButton}" Content="Назад"  VerticalAlignment="Bottom" HorizontalAlignment="Left" Click="BtnCancel_OnClick"/>
         <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="30*" />
@@ -32,8 +33,8 @@
                    FontSize="36" HorizontalAlignment="Center"
                    Content="{x:Static res:Resources.EnterPassword}" Foreground="{StaticResource xBlack1}" Width="600" Padding="5"/>
 
-            <Button Grid.Column="0" Grid.Row="3" Content="{x:Static res:Resources.Cancel}" Width="250" Padding="10" Click="BtnCancel_OnClick" />
-            <Button Grid.Column="2" Grid.Row="3" Content="{x:Static res:Resources.Ok}" Width="250" Padding="10" Click="BtnOk_Clicked" />
+            <Button Grid.Column="0" Grid.Row="3" Content="{x:Static res:Resources.Cancel}" Style="{StaticResource PrimaryButton}" Width="250" Padding="10" Click="BtnCancel_OnClick" />
+            <Button Grid.Column="2" Grid.Row="3" Content="{x:Static res:Resources.Ok}" Style="{StaticResource PrimaryButton}" Width="250" Padding="10" Click="BtnOk_Clicked" />
 
             <customControls:ValidatingTextBox x:Name="tbPassword" x:FieldModifier="private"
                          Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="3" Height="80" VerticalContentAlignment="Center"
@@ -48,4 +49,6 @@
         </Grid>
 
     </Grid>
+
+    
 </Page>
