--- a/SCME.WpfControlLibrary/DataTemplates/TestParameters/OutputLeakageCurrentTemplate.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/TestParameters/OutputLeakageCurrentTemplate.xaml
@@ -24,16 +24,12 @@
         <ColumnDefinition Width="1.1*" />
     </Grid.ColumnDefinitions>
     <Grid.RowDefinitions>
-        <RowDefinition Height="*" />
-        <RowDefinition Height="*" />
-        <RowDefinition Height="*" />
-        <RowDefinition Height="*" />
-        <RowDefinition Height="*" />
-        <RowDefinition Height="*" />
-        <RowDefinition Height="*" />
-        <RowDefinition Height="*" />
-        <RowDefinition Height="*" />
-        <RowDefinition Height="*" />
+        <RowDefinition Height="auto" />
+        <RowDefinition Height="auto" />
+        <RowDefinition Height="auto" />
+        <RowDefinition Height="auto" />
+        <RowDefinition Height="auto" />
+        <RowDefinition Height="auto" />
     </Grid.RowDefinitions>
     <Label Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="4" Content="Номер позиции" />
     <ComboBox Grid.Column="1" Grid.Row="0" ItemsSource="{Binding Source={StaticResource NumberPosition}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding NumberPosition}" />
@@ -41,26 +37,18 @@
     <Label Grid.Column="0" Grid.Row="1" Content="Напр. управления, В" Visibility="{Binding ShowVoltage, Converter={StaticResource B2V}}" />
     <customControls:NumericUpDown Grid.Column="1" Grid.Row="1"  Visibility="{Binding ShowVoltage, Converter={StaticResource B2V}}" Value="{Binding ControlVoltage, Converter={StaticResource DML}}" />
 
-    <Label Grid.Column="0" Grid.Row="2" >
-        <TextBlock TextWrapping="Wrap">
-                Тип ком. напряж. при измер. утечки</TextBlock>
-    </Label>
+    <Label Grid.Column="0" Grid.Row="2"  Content="Тип ком. напряж. при измер. утечки"/>
     <ComboBox Grid.Column="1" Grid.Row="2" ItemsSource="{Binding Source={StaticResource ApplicationPolarityConstantSwitchingVoltage}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding ApplicationPolarityConstantSwitchingVoltage}"  />
 
     <Label Grid.Column="0" Grid.Row="3" Content="Ком. ток, мА" ></Label>
     <customControls:NumericUpDown Grid.Column="1" Grid.Row="3"   Value="{Binding SwitchedAmperage, Converter={StaticResource DML}}" />
 
-    <TextBlock Grid.Column="0" Grid.Row="4" TextWrapping="Wrap" Visibility="{Binding ShowAuxiliaryVoltagePowerSupply1, Converter={StaticResource B2VC}}">
+    <Label Grid.Column="0" Grid.Row="4" Visibility="{Binding ShowAuxiliaryVoltagePowerSupply1, Converter={StaticResource B2V}}">
         <TextBlock>
                 Напряжение вспом.<LineBreak/>питания 1, В
         </TextBlock>
-    </TextBlock>
-    <customControls:NumericUpDown Grid.Column="1" Grid.Row="4"  Visibility="{Binding ShowAuxiliaryVoltagePowerSupply1, Converter={StaticResource B2VC}}" Value="{Binding AuxiliaryVoltagePowerSupply1, Converter={StaticResource DML}}"   />
-
-    <Label Grid.Column="0" Grid.Row="5" Content="Ток утечки мин, мА" Visibility="{Binding HideMinMax, Converter={StaticResource B2VI}}"></Label>
-    <customControls:NumericUpDown Grid.Column="1" Grid.Row="5"   Value="{Binding LeakageCurrentMinimum, Converter={StaticResource DML}}" Visibility="{Binding HideMinMax, Converter={StaticResource B2VI}}" />
-
-
+    </Label>
+    <customControls:NumericUpDown Grid.Column="1" Grid.Row="4"  Visibility="{Binding ShowAuxiliaryVoltagePowerSupply1, Converter={StaticResource B2V}}" Value="{Binding AuxiliaryVoltagePowerSupply1, Converter={StaticResource DML}}"   />
 
     <Label Grid.Column="3" Grid.Row="0" Content="Тип управления"/>
     <ComboBox Grid.Column="4" Grid.Row="0" ItemsSource="{Binding Source={StaticResource TypeManagement}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding TypeManagement}"  />
@@ -68,39 +56,40 @@
     <Label Grid.Column="3" Grid.Row="1" Content="Ток управления, мА" Visibility="{Binding ShowAmperage, Converter={StaticResource B2V}}"/>
     <customControls:NumericUpDown Grid.Column="4" Grid.Row="1" Visibility="{Binding ShowAmperage, Converter={StaticResource B2V}}" Value="{Binding ControlCurrent, Converter={StaticResource DML}}"  />
 
-    <Label Grid.Column="3" Grid.Row="2" Visibility="{Binding PolarityDCSwitchingVoltageApplicationIsVisible, Converter={StaticResource B2V}}">
-        <TextBlock TextWrapping="Wrap" Text="Полярность прил. пост. ком. напр."/>
-    </Label>
+    <Label  Grid.Column="3" Grid.Row="2"  Content="Полярность прил. пост. ком. напр." Visibility="{Binding PolarityDCSwitchingVoltageApplicationIsVisible, Converter={StaticResource B2V}}"/>
     <ComboBox Grid.Column="4" Grid.Row="2"  Visibility="{Binding PolarityDCSwitchingVoltageApplicationIsVisible, Converter={StaticResource B2V}}"
               ItemsSource="{Binding Source={StaticResource PolarityDCSwitchingVoltageApplication}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding PolarityDCSwitchingVoltageApplication}"/>
 
 
-    <Label Grid.Column="3" Grid.Row="3" >
-        <TextBlock Text="Ком. напр., В" TextWrapping="Wrap"/>
-    </Label>
+    <Label Grid.Column="3" Grid.Row="3" Content="Ком. напр., В" />
     <customControls:NumericUpDown Grid.Column="4" Grid.Row="3"   Value="{Binding SwitchedVoltage, Converter={StaticResource DML}}"   />
 
-    <TextBlock Grid.Column="3" Grid.Row="4" TextWrapping="Wrap" Visibility="{Binding ShowAuxiliaryVoltagePowerSupply2, Converter={StaticResource B2VC}}">
+    <Label Grid.Column="3" Grid.Row="4"  Visibility="{Binding ShowAuxiliaryVoltagePowerSupply2, Converter={StaticResource B2V}}">
         <TextBlock>
                 Напряжение вспом.<LineBreak/>питания 2, В
         </TextBlock>
-    </TextBlock>
-    <customControls:NumericUpDown Grid.Column="4" Grid.Row="4" Visibility="{Binding ShowAuxiliaryVoltagePowerSupply2, Converter={StaticResource B2VC}}"  Value="{Binding AuxiliaryVoltagePowerSupply2, Converter={StaticResource DML}}"   />
+    </Label>
+    <customControls:NumericUpDown Grid.Column="4" Grid.Row="4" Visibility="{Binding ShowAuxiliaryVoltagePowerSupply2, Converter={StaticResource B2V}}"  Value="{Binding AuxiliaryVoltagePowerSupply2, Converter={StaticResource DML}}"   />
 
-    <Label Grid.Column="3" Grid.Row="5" Content="Ток утечки макс, мА" Visibility="{Binding HideMinMax, Converter={StaticResource B2VI}}"></Label>
-    <customControls:NumericUpDown Grid.Column="4" Grid.Row="5"   Value="{Binding LeakageCurrentMaximum, Converter={StaticResource DML}}"  Visibility="{Binding HideMinMax, Converter={StaticResource B2VI}}"/>
+
+    <Grid Grid.Row="5" Grid.ColumnSpan="5" Margin="0,24,0,0" Visibility="{Binding HideMinMax, Converter={StaticResource B2VI}}">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"  />
+            <ColumnDefinition Width="1.1*" />
+            <ColumnDefinition Width="30" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="1.1*" />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto" />
+        </Grid.RowDefinitions>
+
+        <Label Grid.Column="0"   Content="Ток утечки мин, мА" ></Label>
+        <customControls:NumericUpDown Grid.Column="1"   Value="{Binding LeakageCurrentMinimum, Converter={StaticResource DML}}"  />
+
+        <Label Grid.Column="3"  Content="Ток утечки макс, мА" ></Label>
+        <customControls:NumericUpDown Grid.Column="4"   Value="{Binding LeakageCurrentMaximum, Converter={StaticResource DML}}"  />
+        
+    </Grid>
     
-    <!--<TextBlock Grid.Column="3" Grid.Row="4" TextWrapping="Wrap">
-                Ток вспом. питания 1, мА
-    </TextBlock>
-    <customControls:NumericUpDown Grid.Column="4" Grid.Row="4"   Value="{Binding AuxiliaryCurrentPowerSupply1}"   />
-
-    <TextBlock  Grid.Column="3" Grid.Row="5" TextWrapping="Wrap">
-                Ток вспом. питания 2, мА
-    </TextBlock>
-    <customControls:NumericUpDown Grid.Column="4" Grid.Row="5"   Value="{Binding AuxiliaryCurrentPowerSupply2}"   />-->
-
-   
-
-
 </Grid>
