--- a/SCME.WpfControlLibrary/Pages/ProfilesPage.xaml
+++ b/SCME.WpfControlLibrary/Pages/ProfilesPage.xaml
@@ -30,7 +30,7 @@
             <ColumnDefinition Width="22*" />
             <ColumnDefinition Width="75*" />
         </Grid.ColumnDefinitions>
-        <Grid Grid.Column="0" Grid.Row="0" IsEnabled="{Binding IsEditModeInActive}">
+        <Grid Grid.Column="0" Grid.Row="0" IsEnabled="{Binding IsEditModeInActive}"  Background="#FFC9C9C9">
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto" SharedSizeGroup="ColumnMmeAndName" />
                 <RowDefinition Height="auto" />
@@ -46,7 +46,7 @@
                     IsEnabled="{Binding IsEditModeInActive}"
                     Visibility="{Binding ReadOnlyMode, Converter={StaticResource B2VI}}"
                     Content="{x:Static res:Resources.Add}" Click="CreateNewProfile_Click"
-                    Background="{StaticResource PurpleBrush1}" />
+                    Background="#FF0078D7" />
 
             
             <customControls:ValidatingTextBox Grid.Column="0" Grid.Row="2" Tag="{x:Static res:Resources.Search}" Padding="10,0,0,0"
@@ -73,16 +73,15 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto" SharedSizeGroup="ColumnMmeAndName" />
                 <RowDefinition Height="auto" />
-                <RowDefinition Height="auto" />
                 <RowDefinition Height="1*" />
                 <RowDefinition Height="auto" />
             </Grid.RowDefinitions>
 
-            <Grid Grid.Column="0" Grid.Row="0"  Visibility="{Binding ReadOnlyMode, Converter={StaticResource B2VI}}" Background="White">
-                <TextBlock Text="{Binding SelectedProfileNameCopy}"  HorizontalAlignment="Center"> </TextBlock>
+            <Grid Grid.Column="0" Grid.Row="0"  Visibility="{Binding ReadOnlyMode, Converter={StaticResource B2VI}}" Background="#FFC9C9C9">
+                <TextBlock Text="{Binding SelectedProfileNameCopy}" Foreground="Black"  HorizontalAlignment="Center"> </TextBlock>
             </Grid>
 
-            <Grid Grid.Column="0" Grid.Row="0" Visibility="{Binding ReadOnlyMode, Converter={StaticResource B2VI}}" Background="White" Margin="10,0,0,0" Height="60"> 
+            <Grid Grid.Column="0" Grid.Row="0" Visibility="{Binding ReadOnlyMode, Converter={StaticResource B2VI}}" Background="#FFC9C9C9" Margin="0,0,0,0"  Height="60"> 
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="Auto" />
@@ -91,36 +90,38 @@
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
 
-                <customControls:ValidatingTextBox Grid.Column="0"  Grid.Row="0" Text="{Binding SelectedProfileNameCopy}" BorderThickness="0" 
-                         VerticalContentAlignment="Center"
+                <TextBox Grid.Column="0"  Grid.Row="0" Text="{Binding SelectedProfileNameCopy}" Foreground="Black" BorderThickness="0" Margin="40,0,0,0" 
+                         VerticalContentAlignment="Center"  Visibility="{Binding SelectedProfileNotNull, Converter={StaticResource B2V}}"
                          IsEnabled="{Binding IsEditModeActive}" />
                 <!--<Border BorderThickness="1" Grid.Column="0" Grid.Row="0" BorderBrush="Gray"   />-->
-               
-                <Button Grid.Column="1" Grid.Row="0" IsEnabled="{Binding IsEditModeEnabled}" 
+
+                <Button Grid.Column="1" Grid.Row="0" IsEnabled="{Binding IsEditModeEnabled}"   Visibility="{Binding SelectedProfileNotNull, Converter={StaticResource B2V}}"
                         Click="BeginEditProfile_Click" Style="{StaticResource ButtonWithIcon}">
                     <Path Data="{StaticResource Edit}" Style="{StaticResource PathIcon}"/>
                 </Button>
-                <Button Grid.Column="2" Grid.Row="0" IsEnabled="{Binding IsEditModeActive}" 
+                <Button Grid.Column="2" Grid.Row="0" IsEnabled="{Binding IsEditModeActive}"   Visibility="{Binding SelectedProfileNotNull, Converter={StaticResource B2V}}"
                         Click="CancelEditProfile_Click" Style="{StaticResource ButtonWithIcon}" Margin="5,0">
                     <Path Data="{StaticResource Cansel}" Style="{StaticResource PathIcon}"/>
                 </Button>
-                <Button Grid.Column="3" Grid.Row="0" IsEnabled="{Binding IsEditModeActive}"
+                <Button Grid.Column="3" Grid.Row="0" IsEnabled="{Binding IsEditModeActive}"  Visibility="{Binding SelectedProfileNotNull, Converter={StaticResource B2V}}"
                         Click="EndEditProfile_Click" Style="{StaticResource ButtonWithIcon}">
                     <Path Data="{StaticResource Save}" Style="{StaticResource PathIcon}"/>
                 </Button>
-                <Button Grid.Column="4" Grid.Row="0" IsEnabled="{Binding IsEditModeEnabled}" 
+                <Button Grid.Column="4" Grid.Row="0" IsEnabled="{Binding IsEditModeEnabled}"   Visibility="{Binding SelectedProfileNotNull, Converter={StaticResource B2V}}"
                         Click="DeleteProfile_Click" Style="{StaticResource ButtonWithIcon}">
                     <Path Data="{StaticResource Delete}" Style="{StaticResource PathIcon}"/>
                 </Button>
             </Grid>
 
-            <!--<Border Grid.Column="0" Grid.Row="1" Grid.RowSpan="3"
-                    Background="{StaticResource ListViewTestParametersBrush}" />-->
-            <customControls:ScrollViewerLeftMouseButtonScroll Grid.Column="0" Grid.Row="1" Grid.RowSpan="3" VerticalAlignment="Stretch"  Style="{StaticResource DefaultScrollViewer}">
-                <customControls:ScrollViewerLeftMouseButtonScroll.Resources>
-                    
-                </customControls:ScrollViewerLeftMouseButtonScroll.Resources>
-                <Grid IsSharedSizeScope="True" Background="{StaticResource ListViewTestParametersBrush}">
+            
+            <profilesPageComponents:AddTestParameterUserControl Background="White" Grid.Row="1"  Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ProfileVm.SelectedProfileNotNull , Converter={StaticResource B2V}}"
+                                    x:Name="AddTestParameterUserControl" Margin="10"  HorizontalAlignment="Stretch" 
+                                    DataContext="{Binding ProfileDeepDataCopy}"
+                                    AddTestParametersEvent="AddTestParametersEvent_Click" />
+            
+            
+            <customControls:ScrollViewerLeftMouseButtonScroll Grid.Column="0" Grid.Row="2" Grid.RowSpan="3" VerticalAlignment="Stretch" Background="White"  Style="{StaticResource DefaultScrollViewer}">
+                <Grid IsSharedSizeScope="True" Background="White">
                    
                     <Grid.RowDefinitions>
                         <RowDefinition Height="auto"/>
@@ -128,25 +129,15 @@
                         <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
 
-                    <Border Grid.Column="1" Grid.Row="1" IsEnabled="{Binding IsEditModeActive}" Margin="10,10,50,0" BorderThickness="1" BorderBrush="AliceBlue" Visibility="{Binding IsClampingCommutationActive, Converter={StaticResource B2V}}"
-                                     HorizontalAlignment="Stretch" >
-                            <profilesPageComponents:AddTestParameterUserControl Background="{StaticResource ListViewTestParametersBrush}"
-                                    x:Name="AddTestParameterUserControl" Margin="10"  HorizontalAlignment="Stretch" 
-                                    DataContext="{Binding ProfileDeepDataCopy}"
-                                    AddTestParametersEvent="AddTestParametersEvent_Click" />
-                        </Border>
-
-                      
-
                     <profilesPageComponents:ListViewTestParametersUserControl Grid.Column="1" Grid.Row="2" HorizontalAlignment="Stretch" 
-                            ContentIsEnabled="{Binding IsEditModeActive}" 
+                            ContentIsEnabled="{Binding IsEditModeActive}"  
                             ItemSource="{Binding ProfileDeepDataCopy.TestParametersAndNormatives}"
                             PreviewMouseWheel="TestParametersListView_OnPreviewMouseWheel"
                             VirtualizingStackPanel.IsVirtualizing="True" VirtualizingStackPanel.ScrollUnit="Pixel" />
                 </Grid>
             </customControls:ScrollViewerLeftMouseButtonScroll>
 
-            <Button Grid.Column="0" Grid.Row="4" Style="{StaticResource PrimaryButton}" HorizontalAlignment="Right" 
+            <Button Grid.Column="0" Grid.Row="3" Style="{StaticResource PrimaryButton}" HorizontalAlignment="Right" 
                     Content="{x:Static res:Resources.Next}"
                     Visibility="{Binding ButtonNextIsVisible, Converter={StaticResource B2V}}"
                     Command="{Binding ButtonNextRelayCommand}" />
