--- a/SCME.WpfControlLibrary/Pages/SSRTUPage.xaml
+++ b/SCME.WpfControlLibrary/Pages/SSRTUPage.xaml
@@ -15,14 +15,29 @@
                 <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/SSRTUPageStyle.xaml" />
 
             </ResourceDictionary.MergedDictionaries>
-         
+            <Style TargetType="TextBlock" BasedOn="{StaticResource {x:Type TextBlock}}" >
+                <Setter Property="FontWeight" Value="Light"/>
+                <Setter Property="LineStackingStrategy" Value="BlockLineHeight"/>
+                <Setter Property="LineHeight" Value="20"/>
+            </Style>
+            <Style TargetType="Label" BasedOn="{StaticResource {x:Type Label}}" >
+                <Setter Property="FontSize" Value="22"/>
+                <Setter Property="MinHeight" Value="54"/>
+                <Setter Property="VerticalContentAlignment" Value="Center"/>
+                <Setter Property="HorizontalContentAlignment" Value="Left"/>
+                <Style.Triggers>
+                    <Trigger Property="IsEnabled" Value="False">
+                        <Setter Property="Foreground" Value="Black"/>
+                    </Trigger>
+                </Style.Triggers>
+            </Style>
         </ResourceDictionary>
     </Page.Resources>
     <Grid >
         <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="100"/>
             <RowDefinition Height="auto" />
-            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto" />
             <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="auto" />
@@ -39,7 +54,7 @@
             <ComboBox Grid.Column="1" DataContext="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM}"
                       ItemsSource="{Binding Source={StaticResource DutPackageType}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding DutPackageType}"/>
         </Grid>
-        <TabControl Grid.Row="2" Background="Transparent" Name="MainTabControl" BorderThickness="0" Margin="50,0">
+        <TabControl Grid.Row="2" Background="Transparent" Name="MainTabControl" BorderThickness="0" Margin="50,0" Padding="0">
             <TabControl.Resources>
                 <Style TargetType="TabItem">
                     <Setter Property="Height" Value="0"/>
@@ -59,7 +74,7 @@
                 <testParameters:ProhibitionVoltageTemplate DataContext="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM}"/>
             </TabItem>
         </TabControl>
-        <Grid Grid.Row="3" Margin="50,50,50,0">
+        <Grid Grid.Row="3" Margin="50,38,50,0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="*"/>
@@ -84,15 +99,15 @@
             <TextBlock Grid.Column="1" Grid.Row="2" Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.ShowAuxiliaryVoltagePowerSupply2, Converter={StaticResource B2V}}" 
                        Text="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.AuxiliaryCurrentPowerSupply2}" HorizontalAlignment="Right"/>-->
 
-            <TextBlock Grid.Column="0" Grid.Row="0" Text="Ток утечки на выходе, мА" Margin="0,0,0,0"  Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.ShowOutputLeakageCurrent, Converter={StaticResource B2VH}}"/>
-            <TextBlock Grid.Column="1" Grid.Row="0" Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.ShowOutputLeakageCurrent, Converter={StaticResource B2VH}}" 
+            <TextBlock Grid.Column="0" Grid.Row="0" Text="Ток утечки на выходе, мА" Margin="0,0,0,0"  Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.ShowOutputLeakageCurrent, Converter={StaticResource B2V}}"/>
+            <TextBlock Grid.Column="1" Grid.Row="0" Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.ShowOutputLeakageCurrent, Converter={StaticResource B2V}}" 
                        Text="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.Result, Converter={StaticResource DML}}" HorizontalAlignment="Right"/>
 
-            <TextBlock Grid.Column="0" Grid.Row="1" Text="Выходное остаточное напряжение, мВ" Margin="0,0,0,0"  Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.ShowOutputResidualVoltage, Converter={StaticResource B2VH}}"/>
-            <TextBlock Grid.Column="1" Grid.Row="1" Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.ShowOutputResidualVoltage, Converter={StaticResource B2VH}}" 
+            <TextBlock Grid.Column="0" Grid.Row="1" Text="Выходное остаточное напряжение, мВ" Margin="0,0,0,0"  Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.ShowOutputResidualVoltage, Converter={StaticResource B2V}}"/>
+            <TextBlock Grid.Column="1" Grid.Row="1" Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.ShowOutputResidualVoltage, Converter={StaticResource B2V}}" 
                        Text="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.Result, Converter={StaticResource DML}}" HorizontalAlignment="Right"/>
 
-            <Grid Grid.Row="2" Grid.ColumnSpan="2" Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.ShowInputOptions, Converter={StaticResource B2VH}}">
+            <Grid Grid.Row="2" Grid.ColumnSpan="2" Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.ShowInputOptions, Converter={StaticResource B2V}}">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"  />
                     <ColumnDefinition Width="1.1*" />
@@ -101,26 +116,26 @@
                     <RowDefinition Height="auto"/>
                     <RowDefinition Height="auto"/>
                 </Grid.RowDefinitions>
-                <TextBlock Grid.Column="0" Grid.Row="0" Text="Ток входа, мА" Margin="0,0,0,0"  Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.ShowVoltage, Converter={StaticResource B2VH}}"/>
-                <TextBlock Grid.Column="1" Grid.Row="0" Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.ShowVoltage, Converter={StaticResource B2VH}}" 
+                <TextBlock Grid.Column="0" Grid.Row="0" Text="Ток входа, мА" Margin="0,0,0,0"  Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.ShowVoltage, Converter={StaticResource B2V}}"/>
+                <TextBlock Grid.Column="1" Grid.Row="0" Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.ShowVoltage, Converter={StaticResource B2V}}" 
                            Text="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.Result, Converter={StaticResource DML}}" HorizontalAlignment="Right"/>
 
-                <TextBlock Grid.Column="0" Grid.Row="1" Text="Напряжение входа, мВ" Margin="0,0,0,0"  Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.ShowAmperage, Converter={StaticResource B2VH}}"/>
-                <TextBlock Grid.Column="1" Grid.Row="1" Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.ShowAmperage, Converter={StaticResource B2VH}}" 
+                <TextBlock Grid.Column="0" Grid.Row="1" Text="Напряжение входа, мВ" Margin="0,0,0,0"  Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.ShowAmperage, Converter={StaticResource B2V}}"/>
+                <TextBlock Grid.Column="1" Grid.Row="1" Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.ShowAmperage, Converter={StaticResource B2V}}" 
                        Text="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.Result, Converter={StaticResource DML}}" HorizontalAlignment="Right"/>
             </Grid>
 
 
-            <TextBlock Grid.Column="0" Grid.Row="3" Text="Сопротивление в открытом состоянии, Ом" Margin="0,0,30,0"  Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.OpenState, Converter={StaticResource B2VH}}"/>
-            <TextBlock Grid.Column="1" Grid.Row="3" Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.OpenState, Converter={StaticResource B2VH}}" 
+            <TextBlock Grid.Column="0" Grid.Row="3" Text="Сопротивление в открытом состоянии, Ом" Margin="0,0,30,0"  Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.OpenState, Converter={StaticResource B2V}}"/>
+            <TextBlock Grid.Column="1" Grid.Row="3" Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.OpenState, Converter={StaticResource B2V}}" 
                        Text="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.OpenResistance, Converter={StaticResource DML}}" HorizontalAlignment="Right"/>
 
-            <TextBlock Grid.Column="0" Grid.Row="4" Text="Ток вспомогательного питания 1, мА" Margin="0,0,30,0"  Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.ShowAuxiliarySupplyCurrent1, Converter={StaticResource B2VH}}"/>
-            <TextBlock Grid.Column="1" Grid.Row="4" Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.ShowAuxiliarySupplyCurrent1, Converter={StaticResource B2VH}}" 
+            <TextBlock Grid.Column="0" Grid.Row="4" Text="Ток вспомогательного питания 1, мА" Margin="0,0,30,0"  Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.ShowAuxiliarySupplyCurrent1, Converter={StaticResource B2V}}"/>
+            <TextBlock Grid.Column="1" Grid.Row="4" Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.ShowAuxiliarySupplyCurrent1, Converter={StaticResource B2V}}" 
                        Text="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.AuxiliaryCurrentPowerSupply1, Converter={StaticResource DML}}" HorizontalAlignment="Right"/>
 
-            <TextBlock Grid.Column="0" Grid.Row="5" Text="Ток вспомогательного питания 2, мА" Margin="0,0,30,0"  Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.ShowAuxiliarySupplyCurrent2, Converter={StaticResource B2VH}}"/>
-            <TextBlock Grid.Column="1" Grid.Row="5" Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.ShowAuxiliarySupplyCurrent2, Converter={StaticResource B2VH}}" 
+            <TextBlock Grid.Column="0" Grid.Row="5" Text="Ток вспомогательного питания 2, мА" Margin="0,0,30,0"  Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.ShowAuxiliarySupplyCurrent2, Converter={StaticResource B2V}}"/>
+            <TextBlock Grid.Column="1" Grid.Row="5" Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.ShowAuxiliarySupplyCurrent2, Converter={StaticResource B2V}}" 
                        Text="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.AuxiliaryCurrentPowerSupply2, Converter={StaticResource DML}}" HorizontalAlignment="Right"/>
             
             <!--<TextBlock Grid.Column="0" Grid.Row="4" TextWrapping="Wrap">
@@ -135,7 +150,7 @@
 
         </Grid>
 
-        <Grid Grid.Row="5" >
+        <Grid Grid.Row="5" Margin="0,38,0,0" >
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
