--- a/SCME.WpfControlLibrary/Styles/Label.xaml
+++ b/SCME.WpfControlLibrary/Styles/Label.xaml
@@ -33,12 +33,17 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
+        <Style.Triggers>
+            <Trigger Property="IsEnabled" Value="False">
+                <Setter Property="Foreground" Value="Black"/>
+            </Trigger>
+        </Style.Triggers>
     </Style>
 
     <Style TargetType="Label" x:Key="LabelIconButton" BasedOn="{StaticResource {x:Type Label}}">
         <Setter Property="Foreground" Value="White" />
         <Setter Property="HorizontalAlignment" Value="Center"/>
-        <Setter Property="VerticalAlignment" Value="Bottom"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
     </Style>
 
 </ResourceDictionary>
