--- a/SCME.WpfControlLibrary/Styles/ScrollBar.xaml
+++ b/SCME.WpfControlLibrary/Styles/ScrollBar.xaml
@@ -14,14 +14,13 @@
 
     <Style x:Key="ScrollBarThumb" TargetType="{x:Type Thumb}">
         <Setter Property="OverridesDefaultStyle" Value="True" />
-        <Setter Property="Background" Value="Red" />
         <Setter Property="IsTabStop" Value="False" />
         <Setter Property="Focusable" Value="False" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Thumb}">
                     <Grid>
-                        <Border Background="{TemplateBinding Background}" CornerRadius="2" />
+                        <Border Background="{TemplateBinding Background}"  />
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>
@@ -37,7 +36,7 @@
                     <Grid Name="border">
                         <Border Background="{StaticResource PurpleBrush1}" Width="{TemplateBinding Width}"
                                     Height="{TemplateBinding Width}" CornerRadius="2">
-                            <Path Name="path" Stretch="Uniform" Margin="5"
+                            <Path Name="path" Stretch="Uniform" Margin="0"
                                       Stroke="White" StrokeThickness="6"
                                       Data="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=Content}" />
                         </Border>
@@ -45,7 +44,7 @@
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsPressed" Value="True">
                             <Setter TargetName="border" Property="Background" Value="{StaticResource PurpleBrush1}" />
-                            <Setter TargetName="path" Property="Margin" Value="2" />
+                            <Setter TargetName="path" Property="Margin" Value="0" />
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
@@ -81,7 +80,7 @@
                         <Grid.RowDefinitions>
                             <RowDefinition Height="*" />
                         </Grid.RowDefinitions>
-                        <ScrollContentPresenter Margin="1,0,1,0" />
+                        <ScrollContentPresenter Margin="0,0,0,0" />
 
                         <ScrollBar Name="PART_VerticalScrollBar"
                                        Background="White"
@@ -109,7 +108,7 @@
                                                                   Command="ScrollBar.PageUpCommand" />
                                             </Track.DecreaseRepeatButton>
                                             <Track.Thumb>
-                                                <Thumb Background="{StaticResource PurpleBrush1}" MinHeight="50"
+                                                <Thumb Background="#7A7A7A" MinHeight="50"
                                                            Style="{StaticResource ScrollBarThumb}" />
                                             </Track.Thumb>
                                             <Track.IncreaseRepeatButton>
@@ -266,7 +265,7 @@
             </Track>
             <RepeatButton Grid.Row="2" Command="ScrollBar.LineDownCommand"
                                                           Content="M 0 0 L 1 1 L 2 0"
-                                                          Margin="0,1,0,0" Style="{StaticResource ScrollBarLineButton}"
+                                                          Margin="0,0,0,0" Style="{StaticResource ScrollBarLineButton}"
                                                           Height="{Binding Source={StaticResource ListBoxScrollWidth}, Converter={StaticResource G2L}}" />
         </Grid>
     </ControlTemplate>
